--- a/test-output/old/Mobile Application/reporter-output.html
+++ b/test-output/old/Mobile Application/reporter-output.html
@@ -17,6 +17,12 @@
 <tr><td><br>Click on Save Button</br></td></tr>
 <tr><td><br>Enter Text on Search Field</br></td></tr>
 <tr><td><br>Found the note</br></td></tr>
+<tr><td><br>Enter Note</br></td></tr>
+<tr><td><br>Note Entered</br></td></tr>
+<tr><td><br>Click for home page</br></td></tr>
+<tr><td><br>Click Home Menu</br></td></tr>
+<tr><td><br>Enter Text on Search Field</br></td></tr>
+<tr><td><br>Found the note</br></td></tr>
 <tr><td><br>Note Deleted</br></td></tr>
 <tr><td><br>--------------------------------------------------------------------------</br></td></tr>
 <tr><td><br>------------------- Initiating the Mobile App Session -------------------</br></td></tr>
