--- a/test-output/index.html
+++ b/test-output/index.html
@@ -218,16 +218,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'createthenote')
 data.setCell(0, 2, 'android.workpulsetask.index.NotepadIndex')
-data.setCell(0, 3, 156543);
+data.setCell(0, 3, 249921);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'changebackgroundcolor')
 data.setCell(1, 2, 'android.workpulsetask.index.NotepadIndex')
-data.setCell(1, 3, 34247);
+data.setCell(1, 3, 44151);
 window.suiteTableData['Mobile_Application']= { tableData: data, tableDiv: 'times-div-Mobile_Application'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 minutes</span>
+              <span class="suite-total-time">Total running time: 4 minutes</span>
               <div id="times-div-Mobile_Application">
               </div> <!-- times-div-Mobile_Application -->
             </div> <!-- times-div -->
@@ -255,6 +255,12 @@ return data;
                 <span class="reporter-method-output"><br>Clicked on save note</br></span>
                 <span class="reporter-method-output"><br>Enter name</br></span>
                 <span class="reporter-method-output"><br>Click on Save Button</br></span>
+                <span class="reporter-method-output"><br>Enter Text on Search Field</br></span>
+                <span class="reporter-method-output"><br>Found the note</br></span>
+                <span class="reporter-method-output"><br>Enter Note</br></span>
+                <span class="reporter-method-output"><br>Note Entered</br></span>
+                <span class="reporter-method-output"><br>Click for home page</br></span>
+                <span class="reporter-method-output"><br>Click Home Menu</br></span>
                 <span class="reporter-method-output"><br>Enter Text on Search Field</br></span>
                 <span class="reporter-method-output"><br>Found the note</br></span>
                 <span class="reporter-method-output"><br>Note Deleted</br></span>
@@ -303,23 +309,23 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">createthenote</span>
-                <span class="method-start">16743 ms</span>
+                <span class="method-start">31519 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown([TestResult name=createthenote status=SUCCESS method=NotepadIndex.createthenote()[pri:0, instance:an...)</span>
-                <span class="method-start">173286 ms</span>
+                <span class="method-start">281440 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp(public void android.workpulsetask.index.NotepadIndex.changebackgroundcolor() throws java.lang.Except...)</span>
-                <span class="method-start">176546 ms</span>
+                <span class="method-start">289328 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">changebackgroundcolor</span>
-                <span class="method-start">193245 ms</span>
+                <span class="method-start">316520 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown([TestResult name=changebackgroundcolor status=SUCCESS method=NotepadIndex.changebackgroundcolor()[pr...)</span>
-                <span class="method-start">227492 ms</span>
+                <span class="method-start">360671 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
