Added RedBus index,indexpage and verification

--- a/test-output/old/Mobile Application/reporter-output.html
+++ b/test-output/old/Mobile Application/reporter-output.html
@@ -4,30 +4,14 @@
 <tr><td><br>******** Test case ID: Add_Notes_01</br></td></tr>
 <tr><td><br>******** Test Objective: To check the functionality of 'Add Notes' option</br></td></tr>
 <tr><td><br>Click on the + button</br></td></tr>
-<tr><td><br>Clicked on plus button</br></td></tr>
-<tr><td><br>Click on Note</br></td></tr>
-<tr><td><br>Clicked on Note</br></td></tr>
-<tr><td><br>Enter Note</br></td></tr>
-<tr><td><br>Note Entered</br></td></tr>
-<tr><td><br>Click for home page</br></td></tr>
-<tr><td><br>Click Home Menu</br></td></tr>
-<tr><td><br>Click on Save the Note</br></td></tr>
-<tr><td><br>Clicked on save note</br></td></tr>
-<tr><td><br>Enter name</br></td></tr>
-<tr><td><br>Click on Save Button</br></td></tr>
-<tr><td><br>Enter Text on Search Field</br></td></tr>
-<tr><td><br>Found the note</br></td></tr>
-<tr><td><br>Enter Note</br></td></tr>
-<tr><td><br>Note Entered</br></td></tr>
-<tr><td><br>Click for home page</br></td></tr>
-<tr><td><br>Click Home Menu</br></td></tr>
-<tr><td><br>Enter Text on Search Field</br></td></tr>
-<tr><td><br>Found the note</br></td></tr>
-<tr><td><br>Note Deleted</br></td></tr>
+<tr><td><br> <b>Please look to the screenshot - </b></td></tr>
+<tr><td><br><br><Strong><font color=#FF0000>--Failed</font></strong></br></td></tr>
+<tr><td><br><a href='../test-output/screenshots/0921152906828createthenote.png' target='_new'>0921152906828createthenote.png</a></br></td></tr>
 <tr><td><br>--------------------------------------------------------------------------</br></td></tr>
 <tr><td><br>------------------- Initiating the Mobile App Session -------------------</br></td></tr>
 <tr><td><br>--------------------------------------------------------------------------</br></td></tr>
 <tr><td><br>Clicked on logo</br></td></tr>
-<tr><td><br>Choose the Background color option</br></td></tr>
-<tr><td><br>Set the color Indicator</br></td></tr>
+<tr><td><br> <b>Please look to the screenshot - </b></td></tr>
+<tr><td><br><br><Strong><font color=#FF0000>--Failed</font></strong></br></td></tr>
+<tr><td><br><a href='../test-output/screenshots/0921153042358changebackgroundcolor.png' target='_new'>0921153042358changebackgroundcolor.png</a></br></td></tr>
 </table>
